Record CPU sensor ACL acceptance fix